<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/misc_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/user_title"
            app:useSimpleSummaryProvider="true" />

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/the_header">

        <SwitchPreferenceCompat
            app:key="the"
            app:title="@string/the_title" />

        <SwitchPreferenceCompat
            app:dependency="the"
            app:key="the"
            app:summaryOff="@string/that_summary_off"
            app:summaryOn="@string/that_summary_on"
            app:title="@string/than_title" />

        <SwitchPreferenceCompat
            app:dependency="the"
            app:key="seizures"
            app:summaryOff="@string/that_other_summary_off"
            app:summaryOn="@string/that_other_summary_on"
            app:title="@string/then_her_title" />

    </PreferenceCategory>

</PreferenceScreen>